# circumplex

./: .gitignore  .markdownlint.yaml  .markdownlintignore  .pdm-python  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  LICENSE.md  Makefile  README.md  mkdocs.yml  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  python-package.yml  tests.yml
docs/: Introduction to SSM Analysis.ipynb  about.md  api.md  changelog.md  index.md  license.md
docs/api/: data.md  index.md  models.md  plots.md  ssm.md
docs/api/analysis/: bootstrap.md  corr_analysis.md  mean_analysis.md  ssm_analyze.md
docs/api/core/: parameters.md  scores.md
docs/api/utils/: angles.md  contrast.md  tidying_functions.md
docs/reference/: api.md  classes.md  instruments.md  utils.md
docs/stylesheets/: extra.css
docs/tutorials/: Intro_to_SSM_Analysis.ipynb  Intro_to_SSM_Analysis.md  Random_exs.ipynb  Random_exs.md  index.md  introduction-to-ssm-analysis.md  using-instruments-v1.md  using-instruments.ipynb  using-instruments.md
examples/: .gitignore  Intro_to_SSM_Analysis.ipynb  Random_exs.ipynb  introduction-to-ssm-analysis.ipynb  using-instruments-v1.ipynb  using-instruments.ipynb
src/circumplex/: __init__.py  analysis.py  circumplex.py  datasets.py  instrument.py  ssm.py  ssm_analysis.py  ssm_results.py  utils.py  visualization.py
src/circumplex/analysis/: bootstrap.py  corr_analysis.py  mean_analysis.py  ssm_analyze.py
src/circumplex/core/: __init__.py  instrument.py  parameters.py  scores.py  ssm_analysis.py  ssm_plot.py  ssm_results.py  utils.py  visualization.py
src/circumplex/data/: __init__.py
src/circumplex/instruments/: CSIP.json  IIPSC.json  SATP-eng.json  SSQP-eng.json  models.py
src/circumplex/utils/: __init__.py  angles.py  contrast.py  tidying_functions.py
src/circumplex/visualization/: _utils.py  plots.py
tests/: Intro_SSM.ipynb  test_notebooks.py  test_ssm_analysis.py  test_tidying_functions.py  test_visualisation.py
