[project]
name = "circumplex"
version = "0.1.4"
description = "A Python package for analyzing and visualizing circumplex data"
authors = [
    {name = "Andrew Mitchell", email = "andrew.mitchell.18@ucl.ac.uk"},
]
dependencies = [
    "numpy>=1.25.2",
    "matplotlib>=3.8.1",
    "scipy>=1.9.3",
    "pandas[excel,performance]>=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.urls]
repository = "https://github.com/MitchellAcoustics/circumplex"
documentation = "https://circumplex.readthedocs.io/en/latest/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "jupyter>=1.0.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.26",
    "mkdocstrings[python]>=0.25.1",
    "mkdocs-jupyter>=0.24.7",
    "markdown>=3.6",
    "pymdown-extensions>=10.8.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/circumplex"]
