[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  {include-group = "docs"},
  {include-group = "test"},
  "jupyter>=1.0.0",
  "tox>=4.27.0"
]
test = [
  "pytest>=8.3.4",
  "pytest-cov>=7.0.0",
  "pytest-notebook>=0.10.0",
  "xdoctest>=1.3.0"
]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.26",
  "mkdocstrings[python]>=0.25.1",
  "mkdocs-jupyter>=0.24.7",
  "markdown>=3.6",
  "pymdown-extensions>=10.8.1"
]

[project]
name = "circumplex"
version = "0.2.0.dev1"
description = "A Python package for analyzing and visualizing circumplex data"
authors = [
  {name = "Andrew Mitchell", email = "andrew.mitchell.research@gmail.com"}
]
dependencies = [
  "numpy>=1.25.2",
  "scipy>=1.9.3",
  "pandas[excel,performance]>=2.2.2",
  "matplotlib>=3.9.4",
  "seaborn>=0.13.2",
  "nptyping>=2.5.0"
]
readme = "README.md"
requires-python = ">= 3.9"

[project.urls]
repository = "https://github.com/MitchellAcoustics/circumplex"
documentation = "https://circumplex.readthedocs.io/en/latest/"

[tool.hatch.build.targets.wheel]
packages = ["src/circumplex"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.tox]
env_list = ["py39", "py310", "py311", "py312", "py313"]
env_run_base = {commands = [
  [
    "pytest",
    "--cov",
    "--cov-report=xml"
  ]
], dependency_groups = [
  "test"
]}
env.docs = {commands = [["mkdocs", "build"]], dependency_groups = ["docs"]}
gh.python."3.9" = ["py39"]
gh.python."3.10" = ["py310"]
gh.python."3.11" = ["py311"]
gh.python."3.12" = ["py312"]
gh.python."3.13" = ["py313"]
